@@ -1,0 +1,1 @@
+uint16_t hpcrc(uint8_t const *buffer, int len);
